2009/marks/cw3/mychap5/MiniJavaParser.java
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
  import syntaxtree.*;
  public class MiniJavaParser implements MiniJavaParserConstants {

/************************************
 * The MiniJava Grammar Starts Here *
 ************************************/
  static final public Program Goal() throws ParseException {
  MainClass m;
  ClassDeclList cl = new ClassDeclList();
  ClassDecl c;
    m = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = ClassDeclaration();
                           cl.addElement(c);
    }
    jj_consume_token(0);
    {if (true) return new Program(m,cl);}
    throw new Error("Missing return statement in function");
  }

  static final public MainClass MainClass() throws ParseException {
  Identifier i1,i2;
  Statement s;
    jj_consume_token(CLASS);
    i1 = Identifier();
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LSQPAREN);
    jj_consume_token(RSQPAREN);
    i2 = Identifier();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    s = Statement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
    {if (true) return new MainClass(i1,i2,s);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDeclaration() throws ParseException {
  ClassDecl c;
    if (jj_2_1(3)) {
      c = ClassDeclarationSimple();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        c = ClassDeclarationExtends();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDeclarationSimple() throws ParseException {
  Identifier i;
  VarDecl v;
  VarDeclList vl = new VarDeclList();
  MethodDecl m;
  MethodDeclList ml = new MethodDeclList();
    jj_consume_token(CLASS);
    i = Identifier();
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      v = VarDeclaration();
                                                       vl.addElement(v);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      m = MethodDeclaration();
                                                       ml.addElement(m);
    }
    jj_consume_token(RBRACE);
    {if (true) return new ClassDeclSimple(i,vl,ml);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDeclarationExtends() throws ParseException {
  Identifier i1,i2;
  VarDecl v;
  VarDeclList vl = new VarDeclList();
  MethodDecl m;
  MethodDeclList ml = new MethodDeclList();
    jj_consume_token(CLASS);
    i1 = Identifier();
    jj_consume_token(EXTENDS);
    i2 = Identifier();
    jj_consume_token(LBRACE);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      v = VarDeclaration();
                                                       vl.addElement(v);
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      m = MethodDeclaration();
                                                       ml.addElement(m);
    }
    jj_consume_token(RBRACE);
    {if (true) return new ClassDeclExtends(i1,i2,vl,ml);}
    throw new Error("Missing return statement in function");
  }

  static final public VarDecl VarDeclaration() throws ParseException {
  Type t;
  Identifier i;
    t = Type();
    i = Identifier();
    jj_consume_token(SEMICOLON);
    {if (true) return new VarDecl(t,i);}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodDeclaration() throws ParseException {
  Type t;
  Identifier i;
  FormalList fl = new FormalList();
  VarDecl v;
  VarDeclList vl = new VarDeclList();
  Statement s;
  StatementList sl = new StatementList();
  Exp e;
    jj_consume_token(PUBLIC);
    t = Type();
    i = Identifier();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case INTEGER:
    case IDENTIFIER:
      fl = FormalParameterList();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_6:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_6;
      }
      v = VarDeclaration();
                                          vl.addElement(v);
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_7;
      }
      s = Statement();
                        sl.addElement(s);
    }
    jj_consume_token(RETURN);
    e = Expression();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
    {if (true) return new MethodDecl(t,i,fl,vl,sl,e);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalList FormalParameterList() throws ParseException {
  FormalList fl = new FormalList();
  Formal f;
    f = FormalParameter();
                        fl.addElement(f);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 49:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_8;
      }
      f = FormalParameterRest();
                              fl.addElement(f);
    }
    {if (true) return fl;}
    throw new Error("Missing return statement in function");
  }

  static final public Formal FormalParameter() throws ParseException {
  Type t;
  Identifier i;
    t = Type();
    i = Identifier();
    {if (true) return new Formal(t,i);}
    throw new Error("Missing return statement in function");
  }

  static final public Formal FormalParameterRest() throws ParseException {
  Formal f;
    jj_consume_token(49);
    f = FormalParameter();
    {if (true) return f;}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
  Type t;
    if (jj_2_3(3)) {
      t = ArrayType();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
        t = BooleanType();
        break;
      case INTEGER:
        t = IntegerType();
        break;
      case IDENTIFIER:
        t = IdentifierType();
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public Type ArrayType() throws ParseException {
    jj_consume_token(INTEGER);
    jj_consume_token(LSQPAREN);
    jj_consume_token(RSQPAREN);
    {if (true) return new IntArrayType();}
    throw new Error("Missing return statement in function");
  }

  static final public Type BooleanType() throws ParseException {
    jj_consume_token(BOOLEAN);
    {if (true) return new BooleanType();}
    throw new Error("Missing return statement in function");
  }

  static final public Type IntegerType() throws ParseException {
    jj_consume_token(INTEGER);
    {if (true) return new IntegerType();}
    throw new Error("Missing return statement in function");
  }

  static final public Type IdentifierType() throws ParseException {
  Token t;
    t = jj_consume_token(IDENTIFIER);
    {if (true) return new IdentifierType(t.image);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
  Statement s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      s = Block();
      break;
    default:
      jj_la1[10] = jj_gen;
      if (jj_2_4(2)) {
        s = AssignmentStatement();
      } else if (jj_2_5(2)) {
        s = ArrayAssignmentStatement();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
          s = IfStatement();
          break;
        case WHILE:
          s = WhileStatement();
          break;
        case PRINT:
          s = PrintStatement();
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Block() throws ParseException {
  Statement s;
  StatementList sl = new StatementList();
    jj_consume_token(LBRACE);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case PRINT:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_9;
      }
      s = Statement();
                        sl.addElement(s);
    }
    jj_consume_token(RBRACE);
    {if (true) return new Block(sl);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement AssignmentStatement() throws ParseException {
  Identifier i;
  Exp e;
    i = Identifier();
    jj_consume_token(ASSIGN);
    e = Expression();
    jj_consume_token(SEMICOLON);
    {if (true) return new Assign(i,e);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement ArrayAssignmentStatement() throws ParseException {
  Identifier i;
  Exp e1,e2;
    i = Identifier();
    jj_consume_token(LSQPAREN);
    e1 = Expression();
    jj_consume_token(RSQPAREN);
    jj_consume_token(ASSIGN);
    e2 = Expression();
    jj_consume_token(SEMICOLON);
    {if (true) return new ArrayAssign(i,e1,e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement IfStatement() throws ParseException {
  Exp e;
  Statement s1,s2;
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
    s1 = Statement();
    jj_consume_token(ELSE);
    s2 = Statement();
    {if (true) return new If(e,s1,s2);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement WhileStatement() throws ParseException {
  Exp e;
  Statement s;
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
    s = Statement();
    {if (true) return new While(e,s);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement PrintStatement() throws ParseException {
  Exp e;
    jj_consume_token(PRINT);
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
    {if (true) return new Print(e);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp Expression() throws ParseException {
  Exp e;
    if (jj_2_6(2147483647)) {
      e = AndExpression();
    } else if (jj_2_7(2147483647)) {
      e = OrExpression();
    } else if (jj_2_8(2147483647)) {
      e = CompareExpression();
    } else if (jj_2_9(2147483647)) {
      e = PlusExpression();
    } else if (jj_2_10(2147483647)) {
      e = MinusExpression();
    } else if (jj_2_11(2147483647)) {
      e = TimesExpression();
    } else if (jj_2_12(2147483647)) {
      e = DivisionExpression();
    } else if (jj_2_13(2147483647)) {
      e = ArrayLookup();
    } else if (jj_2_14(2147483647)) {
      e = ArrayLength();
    } else if (jj_2_15(2147483647)) {
      e = MethodCall();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case NOT:
      case FALSE:
      case NEW:
      case THIS:
      case TRUE:
      case INTEGER_LITERAL:
      case IDENTIFIER:
        e = PrimaryExpression();
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp AndExpression() throws ParseException {
  Exp e1,e2;
    e1 = PrimaryExpression();
    jj_consume_token(50);
    e2 = PrimaryExpression();
    {if (true) return new And(e1,e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp OrExpression() throws ParseException {
  Exp e1,e2;
    e1 = PrimaryExpression();
    jj_consume_token(51);
    e2 = PrimaryExpression();
    {if (true) return new Or(e1,e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp CompareExpression() throws ParseException {
  Exp e1,e2;
    e1 = PrimaryExpression();
    jj_consume_token(LT);
    e2 = PrimaryExpression();
    {if (true) return new LessThan(e1,e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp PlusExpression() throws ParseException {
  Exp e1,e2;
    e1 = PrimaryExpression();
    jj_consume_token(PLUS);
    e2 = PrimaryExpression();
    {if (true) return new Plus(e1,e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp MinusExpression() throws ParseException {
  Exp e1,e2;
    e1 = PrimaryExpression();
    jj_consume_token(MINUS);
    e2 = PrimaryExpression();
    {if (true) return new Minus(e1,e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp TimesExpression() throws ParseException {
  Exp e1,e2;
    e1 = PrimaryExpression();
    jj_consume_token(52);
    e2 = PrimaryExpression();
    {if (true) return new Times(e1,e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp DivisionExpression() throws ParseException {
  Exp e1,e2;
    e1 = PrimaryExpression();
    jj_consume_token(DIVISION);
    e2 = PrimaryExpression();
    {if (true) return new Division(e1,e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ArrayLookup() throws ParseException {
  Exp e1,e2;
    e1 = PrimaryExpression();
    jj_consume_token(LSQPAREN);
    e2 = PrimaryExpression();
    jj_consume_token(RSQPAREN);
    {if (true) return new ArrayLookup(e1,e2);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ArrayLength() throws ParseException {
  Exp e;
    e = PrimaryExpression();
    jj_consume_token(DOT);
    jj_consume_token(LENGTH);
    {if (true) return new ArrayLength(e);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp MethodCall() throws ParseException {
  Exp e;
  Identifier i;
  ExpList el = new ExpList();
    e = PrimaryExpression();
    jj_consume_token(DOT);
    i = Identifier();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
    case NOT:
    case FALSE:
    case NEW:
    case THIS:
    case TRUE:
    case INTEGER_LITERAL:
    case IDENTIFIER:
      el = ExpressionList();
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    {if (true) return new Call(e,i,el);}
    throw new Error("Missing return statement in function");
  }

  static final public ExpList ExpressionList() throws ParseException {
  Exp e1,e2;
  ExpList el = new ExpList();
    e1 = Expression();
    el.addElement(e1);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 49:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_10;
      }
      e2 = ExpressionRest();
                          el.addElement(e2);
    }
    {if (true) return el;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ExpressionRest() throws ParseException {
  Exp e;
    jj_consume_token(49);
    e = Expression();
    {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp PrimaryExpression() throws ParseException {
  Exp e;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      e = IntegerLiteral();
      break;
    case TRUE:
      e = TrueLiteral();
      break;
    case FALSE:
      e = FalseLiteral();
      break;
    case IDENTIFIER:
      e = IdentifierExp();
      break;
    case THIS:
      e = ThisExpression();
      break;
    default:
      jj_la1[16] = jj_gen;
      if (jj_2_16(3)) {
        e = ArrayAllocationExpression();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW:
          e = AllocationExpression();
          break;
        case NOT:
          e = NotExpression();
          break;
        case LPAREN:
          e = BracketExpression();
          break;
        default:
          jj_la1[17] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp IntegerLiteral() throws ParseException {
  Token t;
    t = jj_consume_token(INTEGER_LITERAL);
    {if (true) return new IntegerLiteral(Integer.parseInt(t.image));}
    throw new Error("Missing return statement in function");
  }

  static final public Exp TrueLiteral() throws ParseException {
    jj_consume_token(TRUE);
    {if (true) return new True();}
    throw new Error("Missing return statement in function");
  }

  static final public Exp FalseLiteral() throws ParseException {
    jj_consume_token(FALSE);
    {if (true) return new False();}
    throw new Error("Missing return statement in function");
  }

  static final public Exp IdentifierExp() throws ParseException {
  Token t;
    t = jj_consume_token(IDENTIFIER);
    {if (true) return new IdentifierExp(t.image);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ThisExpression() throws ParseException {
    jj_consume_token(THIS);
    {if (true) return new This();}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ArrayAllocationExpression() throws ParseException {
  Exp e;
    jj_consume_token(NEW);
    jj_consume_token(INTEGER);
    jj_consume_token(LSQPAREN);
    e = Expression();
    jj_consume_token(RSQPAREN);
    {if (true) return new NewArray(e);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp AllocationExpression() throws ParseException {
  Identifier i;
    jj_consume_token(NEW);
    i = Identifier();
    jj_consume_token(LPAREN);
    jj_consume_token(RPAREN);
    {if (true) return new NewObject(i);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp NotExpression() throws ParseException {
  Exp e;
    jj_consume_token(NOT);
    e = Expression();
    {if (true) return new Not(e);}
    throw new Error("Missing return statement in function");
  }

  static final public Exp BracketExpression() throws ParseException {
  Exp e;
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
    {if (true) return e;}
    throw new Error("Missing return statement in function");
  }

  static final public Identifier Identifier() throws ParseException {
  Token t;
    t = jj_consume_token(IDENTIFIER);
    {if (true) return new Identifier(t.image);}
    throw new Error("Missing return statement in function");
  }

  static final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }
